--- a/main.tex
+++ b/main.tex
@@ -61,6 +61,7 @@
 \newunicodechar{✗}{\ding{55}}
 
 \usepackage{amsthm}
+\usepackage{amsmath}
  
 \theoremstyle{plain}
 \newtheorem{definition}{Definition}
@@ -1070,6 +1071,7 @@ then \texttt{α ∈ y}.
 
 We now formally state the \emph{data retention} property.
 \begin{prop}[Data Retention]
+\label{prop:data-retention}
   Let \texttt{x} and \texttt{y} be two heterogeneous lists, let
   \texttt{e = diff x y} and let \texttt{α} be a node.
 %
@@ -1174,21 +1176,28 @@ Then either \texttt{f ∈ e₃} or there is a conflict \texttt{c} such that
     \end{thm}
 
     \subsection{Structural  Invariants}
-    An edit script transforms lists of trees, traversing and processing 
-    their nodes in depth-first order.
-    It represents a mapping from the source to the target, in which 
-    nodes of the source are embedded in nodes of the target.
-    A central property ensured by edit scripts is that the 
-    embedding preserves the depth-first ordering of source and target nodes.
-    However nodes are not only mapped (updated) from the source to the 
-    target, but they may also be inserted and removed. 
-    Therefore the embedding-preserving property has to be adjusted to
-    take these transformations into account.
-
-    Firstly we formally define depth-first ordering on trees, secondly
-    we give a similar relation for edits contained in edit scripts, 
-    lastly, by showing how the former implies the latter we deduce
-    the structural invariant.
+    An edit script describes how to transform the source object into
+    the target object, by traversing it in \emph{depth-first order}
+    and mapping source nodes into target nodes.
+    %
+    Interestingly the embedding preserves the depth-first order: if a
+    source node comes before another then the mapping of the first
+    will come before the mapping of the second.    
+    %
+    However nodes are not only mapped (updated) from the source to the
+    target, but they may also be inserted and removed, therefore the
+    structural invariant must be adjusted to take these edits into
+    account.
+    %
+    Intuitively the order is preserved because nodes that 
+    are mapped first in a script precede those that are mapped later.
+    %
+    We start by generalizing depth-first ordering to list of trees and
+    giving a basic ordering to edits in a script.
+    %
+    % The structural invariant property relies on 
+    % by showing how the former implies the latter we deduce
+    % the structural invariant.
     
 
     \paragraph{Depth-First Order}
@@ -1196,9 +1205,8 @@ Then either \texttt{f ∈ e₃} or there is a conflict \texttt{c} such that
     and then traversing recursively its subtrees from the leftmost to the rightmost.
     The traversal induces an ordering on the nodes, so that those that
     are visited sooner come before those that are processed later.
-    Since the edit scripts manipulate list of trees, instead of single trees,
-    also the definitions about ordering relations will be adjusted accordingly.
-
+    Since edit scripts work with list of trees, we have not to generalize the order accordingly.
+    
     The type \texttt{hs ⊢ α ⊏ β} denotes that, in the list of trees \texttt{hs}, 
     the node \texttt{α} comes before the node \texttt{β}, according to the
     depth first traversal.
@@ -1209,155 +1217,124 @@ data _⊢_⊏_ : Hist xs → F as a → F bs b → Set where
   there : (hs₁ +++ hs₂) ⊢ α ⊏ β → Node γ hs₁ ∷ hs₂ ⊢ α ⊏ β
 \end{minted}
 
-    The list is used as a stack of trees containing the nodes to be visited.
-    In the base constructor \texttt{here}, the node \texttt{α} is pushed on the 
-    stack and thus comes before any node \texttt{β}, that belongs to the
-    stack of nodes yet to be processed.
-    The recursive constructor \texttt{there} adds a node \texttt{γ} to a list of 
-    trees, in which \texttt{α} already comes before \texttt{β}.
-    Note that the top elements of the stack (\texttt{hs₁}) are popped 
-    and combined to construct a new tree, rooted respectively 
-    in \texttt{α} and \texttt{γ}, which is then pushed on the stack. 
-    In this way it is possible to extend the stack node by node, 
-    retaining type-safety. 
+    Intuitively the list is used as a stack, so that after visiting
+    each node its children, yet to be traversed, are pushed on the stuck.
+    Note that those trees will be visited before those already on the stuck,
+    hence following correctly the depth-first traversal.
 
-    \paragraph{Edits Order}
-    The next data type defines a similar relation for edit scripts.
-    The type \texttt{e ⊢ₑ f ⊏ g} denotes that in the script \texttt{e}, the edit
-    \texttt{f} precedes the edit \texttt{g}.
+    \paragraph{Edit Order}
+    Since edit scripts are a flat list-like data structure, we simply
+    order edits according to their position in the script.
 
-\begin{minted}{agda}
-data _⊢ₑ_⊏_ : ES xs ys → u ⟿ v → w ⟿ z → Set where
-  here : (f : w ⟿ z) → g ∈ₑ e → f ∷ e ⊢ₑ f ⊏ g 
-  there : (h : s ⟿ t) → e ⊢ₑ f ⊏ g → h ∷ e ⊢ₑ f ⊏ g 
-\end{minted}
+\begin{definition}[Edit Order]
+Given an edit script \texttt{e} and two edits \texttt{f} and \texttt{g}, we write
+\texttt{e ⊢ₑ f ⊏ g} if and only if \texttt{f} precedes \texttt{g} in \texttt{e}.
+\end{definition}
 
-    The following basic properties ensure that the order of two edits 
-    is reflected by the order of their source nodes in the \emph{source} object.
-\begin{minted}{agda}
-        f : ⟨ α ⟩ ⟿ v 
-        g : ⟨ β ⟩ ⟿ w       ⇒       ⟪ e ⟫ ⊢ α ⊏ β
-        e ⊢ₑ f ⊏ g 
-\end{minted}
-    Similarly the order of the target nodes is preserved in the \emph{target} 
-    object.    
+\paragraph{Order Invariant}
+Before stating the main theorem relies on two fundamental properties:
+that the target (source) function and \texttt{diff} are
+\emph{order-preserving} (OP).
+%
+Property \ref{prop:order-preserving-target-fun} guarantees that the
+relative order of edits in a script corresponds to the depth-first
+order of their target (source) nodes in the target (source) objects.
+%
+Property \ref{prop:order-preserving-embedding} ensures that if in the
+target (source) object a node precedes another, then in the diff
+script the first node is produced by an edit that comes before the
+edit that produces the second.
 
-\begin{minted}{agda}
-        f : v ⟿ ⟨ α ⟩
-        g : w ⟿ ⟨ β ⟩       ⇒      ⟦ e ⟧ ⊢ α ⊏ β
-        e ⊢ₑ f ⊏ g
-\end{minted}
+\begin{prop}[\texttt{⟦\_⟧} is OP]
+\label{prop:order-preserving-target-fun}
+Let \texttt{e} be an edit script and \texttt{f} and \texttt{g} edits
+of type \texttt{v ⟿ ⟨ α ⟩} and \texttt{w ⟿ ⟨ β ⟩}, such that
+\texttt{e ⊢ f ⊏ g}, then \texttt{⟦ e ⟧ ⊢ α ⊏ β}.
+\end{prop}
+  We omit the symmetrical property for \emph{source} nodes and objects.
 
-    Conversely we show that if in the \emph{source} (\emph{target}) 
-    object one node precedes another, then the corresponding edits in their diff 
-    will share the same order.
-\begin{minted}{agda}
-Diff x y e  ,  x ⊢ α ⊏ β    ⇒    ∃  f : ⟨ α ⟩ ⟿ u , g : ⟨ β ⟩ ⟿ v . 
-                                                e ⊢ₑ f ⊏ g
+\begin{prop}[Embedding is OP]
+\label{prop:order-preserving-embedding}
+Let \texttt{x} and \texttt{y} be heterogeneous lists and let 
+\texttt{e} be an edit script such that \texttt{e = diff x y}.
+Let also \texttt{α} and \texttt{β} be nodes such that \texttt{y ⊢ α ⊏ β}.
+Then there are edits \texttt{f : u ⟿ ⟨ α ⟩} and \texttt{g : v ⟿ ⟨ β ⟩}
+such that \texttt{e ⊢ f ⊏ g}.
+\end{prop}
+\begin{proof}
+  The proof relies on the specification of \texttt{diff} (Diff⇒).
+  By induction on \texttt{y ⊢ α ⊏ β} we locate \texttt{f : u ⟿ ⟨ α ⟩}
+  in \texttt{e}. By Proposition \ref{prop:data-retention} it follows that
+  there exists \texttt{g : v ⟿ ⟨ β ⟩} in the tail of \texttt{e}.
+\end{proof}
+We again omit the corresponding property for \emph{source} nodes and object.
 
-Diff x y e  ,  y ⊢ α ⊏ β    ⇒    ∃  f : u ⟿ ⟨ α ⟩ , g : v ⟿ ⟨ β ⟩ . 
-                                                e ⊢ₑ f ⊏ g
-\end{minted}
-
-    \paragraph{Order-preserving Embedding}
-    We now have all the lemmas to prove the main theorem, 
-    which states that the edit script data type preserves the depth-first order of
-    the source and target objects.
-    The theorem is split in two parts, the first one considers 
-    the ordering of the source object, and the second of the target.
-    The first one states that, given an edit script \texttt{e}, 
-    if in its source object a node \texttt{α} comes before
-    some node \texttt{β}, then one of the following holds:
+    % We now have all the lemmas to prove the \emph{order invariant}
+    % theorem, which ensures that the edit script data type preserves
+    % the depth-first order of the source (target) objects.
+    %
+We now prove our main theorem, which ensures that
+\texttt{diff} preserves the relative order of nodes in the
+source (target) objects.
+%
+Since nodes may also be deleted the property sees also these cases,
+namely if node \texttt{α} precedes \texttt{β} in the source object of
+script \texttt{e}, then one of the following holds:
     \begin{itemize}
-    \item \texttt{α} is deleted in \texttt{e};
-    \item \texttt{β} is deleted in \texttt{e};
-    \item There are two nodes \texttt{γ} and \texttt{φ}, such that the node 
-    \texttt{α} is 	mapped to \texttt{γ}, the node \texttt{β} is mapped to 
-    \texttt{φ} in \texttt{e} and 
-    in the target	object, the node \texttt{γ} comes before \texttt{φ}
+    \item Node \texttt{α} is deleted in \texttt{e};
+    \item Node \texttt{β} is deleted in \texttt{e};
+    \item Node \texttt{α} is mapped to some node \texttt{γ} and node
+      \texttt{β} is mapped to some node \texttt{φ}, such that node
+      \texttt{γ} comes before node \texttt{φ} in the target object.
     \end{itemize}
+%
+    We show only the theorem about the \emph{source} object, because
+    the other is symmetrical.
+\begin{thm}[\texttt{diff} is OP]
+  Let \texttt{x} and \texttt{y} be heterogeneous lists and \texttt{e}
+  an edit script, such that \texttt{e = diff x y}. Let also \texttt{α}
+  and \texttt{β} be nodes such that \texttt{x ⊢ α ⊏ β} then either
+  \texttt{e ⊢ ⟨ α ⟩ ⟿ ⊥} or \texttt{e ⊢ ⟨ β ⟩ ⟿ ⊥} or there exists nodes
+  \texttt{γ} and \texttt{φ} such that \texttt{e ⊢ ⟨ α ⟩ ⟿ ⟨ γ ⟩},
+  \texttt{e ⊢ ⟨ β ⟩ ⟿ ⟨ φ ⟩} and \texttt{y ⊢ γ ⊏ φ}.
+\end{thm}
+\begin{proof}
+  By Proposition \ref{prop:order-preserving-embedding} there are edits
+  \texttt{f : ⟨ α ⟩ ⟿ u} and \texttt{g : ⟨ β ⟩ ⟿ v}, such that
+  \texttt{e ⊢ f ⊏ g}.
+  %
+  By case analysis either \texttt{u = ⊥} or \texttt{v = ⊥} or \texttt{u = ⟨ γ ⟩}
+  and \texttt{v = ⟨ Φ ⟩}. In the first (second) case \texttt{α} (\texttt{β}) is deleted and we are done.
+  In the third case they are both updated, i.e.\ \texttt{e ⊢ ⟨ α ⟩ ⟿ ⟨ γ ⟩} and
+  \texttt{e ⊢ ⟨ β ⟩ ⟿ ⟨ φ ⟩}.
+  %
+  By Proposition \ref{prop:order-preserving-target-fun} we deduce that
+  \texttt{⟦ e ⟧ ⊢ γ ⊏ Φ} and by the specification of \texttt{diff}
+  (\texttt{Diff⇐}) it follows that \texttt{y ⊢ γ ⊏ Φ}.
+\end{proof}
 
-    The theorem can be formally stated as follows:
-\begin{minted}{agda}
-        Diff x y e   ,   x ⊢ α ⊏ β      ⇒      e ↦ α ⊏ β
-\end{minted}
-
-    Where the type \texttt{e ↦ α ⊏ β} denotes that \texttt{e} is a (source) 
-    order-preserving embedding:
-\begin{minted}{agda}
-data _↦_⊏_ (e : ES xs ys) (α : F as a) (β : F bs b) : Set where
-  Del₁ : e ⊢ₑ ⟨ α ⟩ ⟿ ⊥ → e ↦ α ⊏ β
-  Del₂ : e ⊢ₑ ⟨ β ⟩ ⟿ ⊥ → e ↦ α ⊏ β
-  Map₂ : e ⊢ₑ ⟨ α ⟩ ⟿ ⟨ γ ⟩ → e ⊢ₑ ⟨ β ⟩ ⟿ ⟨ φ ⟩ → 
-         ⟦ e ⟧ ⊢ γ ⊏ φ → e ↦ α ⊏ β
-\end{minted}
-
-    \paragraph{Proof Sketch} By the edit order properties discussed in the previous
-    paragraph we know that \texttt{e} contains two edits \texttt{f} and \texttt{g}
-    that map respectively \texttt{α} to some value \texttt{u} and \texttt{β} to
-    \texttt{v}, such that \texttt{e ⊢ₑ f ⊏ g}. 
-    By inspection either \texttt{u} is empty (\texttt{⊥}), or \texttt{v}
-    is empty, or they both wrap two nodes \texttt{γ} and \texttt{Φ}.
-    In the first two cases it follows that either \texttt{f} or \texttt{g} is
-    a delete and the theorem holds (\texttt{Del₁} and \texttt{Del₂}).
-    In the last case \texttt{f} and \texttt{g} are both updates then 
-    \texttt{e ⊢ₑ ⟨ α ⟩ ⟿ ⟨ γ ⟩} and \texttt{e ⊢ₑ ⟨ β ⟩ ⟿ ⟨ Φ ⟩}.
-    Since \texttt{e ⊢ₑ f ⊏ g} we can apply the first edit-order property from
-    which follows that \texttt{⟦ e ⟧ ⊢ γ ⊏ Φ} and the theorem holds (\texttt{Map₂}).
-
-    The second theorem is symmetrical to the first and thus we will 
-    briefly outline it.
-    It states that, given an edit script \texttt{e}, if in its
-    target object a node \texttt{α} comes before
-    some node \texttt{β}, then one of the following holds:
-    \begin{itemize}
-            \item \texttt{α} is inserted in \texttt{e};
-            \item \texttt{β} is inserted in \texttt{e};
-            \item There are two nodes \texttt{γ} and \texttt{φ}, such that the node 
-            \texttt{γ} is mapped to \texttt{α}, the node \texttt{φ} is mapped to 
-            \texttt{β} in 	\texttt{e} and in the source object, 
-            the node \texttt{γ} comes before \texttt{φ}
-    \end{itemize}
-
-    More formally:
-\begin{minted}{agda}
-        Diff x y e   ,   y ⊢ α ⊏ β      ⇒      e ↤ α ⊏ β
-\end{minted}
-
-    The type \texttt{e ↤ α ⊏ β} denotes that \texttt{e} is a (target) 
-    order-preserving embedding:
-
-\begin{minted}{agda}
-data _↤_⊏_ (e : ES xs ys) (α : F as a) (β : F bs b) : Set where
-  Ins₁ : e ⊢ₑ ⊥ ⟿ ⟨ α ⟩ → e ↤ α ⊏ β
-  Ins₂ : e ⊢ₑ ⊥ ⟿ ⟨ β ⟩ → e ↤ α ⊏ β
-  Map₂ : e ⊢ₑ ⟨ γ ⟩ ⟿ ⟨ α ⟩ → e ⊢ₑ ⟨ φ ⟩ ⟿ ⟨ β ⟩ → 
-       ⟪ e ⟫ ⊢ γ ⊏ φ → e ↤ α ⊏ β
-\end{minted}
-
-    The proof is symmetrical to the first one and will not be discussed any further.
-
-    \paragraph{Merged$_3$}
-    Also successful merges retain the order-preserving property, i.e.\
-    the order of the edits in the input scripts is preserved.
-    The property holds intuitively because the merge algorithm
-    does not rearrange the input edits, 
-    but rather merge them pointwise, retaining the original order in the merged 
-    script.
-    Nevertheless identity edits might be dropped in the merged script in favour,
-    according to the semantics of \texttt{f ⊔ g ↧ h}, hence
-    the theorem applies only to \emph{non-identity} edits.
-    Note also that successful merges do not trigger any conflict, which
-    would also break this property.
-
-\begin{minted}{agda}
-    Merged e₁ e₂ e₃
-    e₁ ⊢ₑ f ⊏ g                  ⇒              e₃ ⊢ₑ f ⊏ g
-    f : u ⟿ v  , g : w ⟿ z  
-    u ≢ v , w ≢ z
-\end{minted}
-    Since \texttt{Merged₃ e₁ e₂ e₃} is a symmetric relation, the property holds 
-    for edits of the second script. 
+We now generalize the \emph{order invariant} property to
+\texttt{diff₃}, which guarantees that the relative order of edits in
+each input script is preserved in the merged script.
+%
+Note that the property is restricted only to successful merges and
+furthermore only to \emph{non-identity} edits, since they could 
+ne be excluded in favor of proper changing edits otherwise.
+%
+The property holds intuitively because the merge algorithm does not
+rearrange the input edits, but rather merge them pointwise, retaining
+the original order in the merged script.
+%
+\begin{thm}[\texttt{diff₃} is OP]
+  Let \texttt{e₁}, \texttt{e₂} and \texttt{e₃} be edit scripts such
+  that \texttt{e₁ ⋎ e₂}, \texttt{e₃ = e₁ ⊔₃ e₂} and \texttt{e₃} does not
+  contain conflicts.
+%
+  Let \texttt{f} and \texttt{g} be edits of type \texttt{u ⟿ v} and
+  \texttt{w ⟿ z} such that \texttt{u ≢ v}, \texttt{w ≢ z} and
+  \texttt{e₁ ⊢ f ⊏ g}, then \texttt{e₃ ⊢ₑ f ⊏ g}.
+\end{thm}
+  The theorem holds also with respect to the edits contained in \texttt{e₂}.
 
 \section{Discussion and Related Work}
 \label{sec:related-work}
